--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ yarn-error.log
 /.idea
 .prettierrc.json
 phpcs.ruleset.xml
+/.idea 
+/report.xml 
+/.phpstorm.meta.php 
+/_ide_helper.php 
+/_ide_helper_models.php 
